[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellstitch-cuda"
version = "1.5.7"
description = "CUDA-accelerated CellStitch 3D labeling using Instanseg segmentation."
readme = "README.md"
authors = [{ name = "Tom van Leeuwen", email = "tom@tleeuwen.nl" }]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA :: 11",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["3D labeling", "cell labels", "2D stitching"]
dependencies = [
    "instanseg-torch>=0.1.1",
    "cellpose>=4.0.8",
    "POT>=0.8.1",
    "sphinx",
    "sphinxcontrib-apidoc",
    "tifffile",
    "numpy",
    "cupy-cuda12x; extra != \"cuda11\"",
    "joblib",
    "fill-voids",
]
requires-python = ">=3.10, <3.12"
urls = { "Homepage" = "https://github.com/Tomvl117/cellstitch-cuda" }

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.bumpver]
current_version = "1.5.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']

[project.optional-dependencies]
cuda11 = ["cupy-cuda11x"]
